# rip

./: .dockerignore  .gitignore  .gitmodules  .travis.yml  CMakeCache.txt  CMakeLists.txt  CPackSourceConfig.cmake  Dockerfile  README.md  build-docker.sh  build-linux.sh  cmake_install.cmake  compile_commands.json  go-docker.sh
appendages/: CMakeLists.txt  Doxyfile  README.md  cmake_install.cmake
appendages/include/: analog_input.hpp  appendage.hpp  appendage_factory.hpp  appendages_exceptions.hpp  digital_input.hpp  exceptions.hpp  servo.hpp  ultrasonic.hpp
appendages/include/appendages/: analog_input.hpp  appendage.hpp  appendage_factory.hpp  bno055.hpp  digital_input.hpp  digital_output.hpp  exceptions.hpp  ir_2018.hpp  navx.hpp  roboclaw.hpp  servo.hpp  ultrasonic.hpp
appendages/json/: analog_input.json  bno055.json  digital_input.json  roboclaw.json  ultrasonic.json
appendages/src/: analog_input.cpp  appendage.cpp  appendage_factory.cpp  bno055.cpp  digital_input.cpp  digital_output.cpp  ir_2018.cpp  navx.cpp  roboclaw.cpp  servo.cpp  ultrasonic.cpp
appendages/xml/: analog_input.xml  bno055.xml  digital_input.xml  digital_output.xml  ir2018.xml  ir_2018.xml  navx.xml  roboclaw.xml  servo.xml  ultrasonic.xml
arduino_gen/: .gitignore  CMakeLists.txt  Doxyfile  README.md  arduino_gen  cmake_install.cmake  code_template.txt  dev1.txt  dev2.txt
arduino_gen/appendages/json/: analog_input.json  servo.json
arduino_gen/appendages/xml/: digital_input.xml  ir2018.xml
arduino_gen/include/: appendage.hpp  appendage_template.hpp  arduino_gen.hpp  argument.hpp  code.hpp  command.hpp  constructors.hpp  exceptions.hpp  includes.hpp  loop.hpp  parameter.hpp  parsed_template.hpp  return_value.hpp  setup.hpp  setup_parameter.hpp  template_parser.hpp  utils.hpp  xml_element.hpp
arduino_gen/include/arduino_gen/: appendage.hpp  arduino_gen.hpp  argument.hpp  code.hpp  command.hpp  constructor.hpp  constructors.hpp  exceptions.hpp  includes.hpp  loop.hpp  return_value.hpp  setup.hpp  utils.hpp  xml_utils.hpp
arduino_gen/src/: appendage.cpp  appendage_template.cpp  arduino_gen.cpp  argument.cpp  code.cpp  command.cpp  constructor.cpp  constructors.cpp  includes.cpp  loop.cpp  main.cpp  parameter.cpp  return_value.cpp  setup.cpp  setup_paramenter.cpp  template_parser.cpp  utils.cpp  xml_element.cpp  xml_utils.cpp
arduino_gen/test/: test_appendage.cpp  test_appendage_template.cpp  test_arduino_gen.cpp  test_code.cpp  test_command.cpp  test_constructor.cpp  test_constructors.cpp  test_includes.cpp  test_loop.cpp  test_parameter.cpp  test_return_value.cpp  test_setup.cpp  test_template_parser.cpp
arduino_gen/ttyACM0/: platformio.ini  serial.sh  ttyACM0.json  ttyACM0_core.json  upload.sh
arduino_gen/ttyACM0/.pioenvs/: .sconsign.dblite  structure.hash
arduino_gen/ttyACM0/src/: ttyACM0.ino
core/: CMakeLists.txt  cmake_install.cmake
core/communication/: CMakeLists.txt  Doxyfile
core/communication/include/: appendage.hpp  core.hpp  spine.hpp
core/communication/src/: appendage.cpp  core.cpp  spine.cpp
core/framework/: CMakeLists.txt  Doxyfile  README.md  cmake_install.cmake
core/framework/include/: action.hpp  core_exceptions.hpp  parallel_action.hpp  robot_base.hpp  run_once_action.hpp  series_action.hpp  spine.hpp  subsystem.hpp  wait_action.hpp
core/framework/src/: instant_action.cpp  loop_action.cpp  parallel_action.cpp  robot_base.cpp  run_once_action.cpp  series_action.cpp  spine.cpp  subsystem.cpp  subsystem.hpp  timeout_action.cpp  wait_action.cpp
core/motor_controllers/: Astyle  CMakeLists.txt  README.md  cmake_install.cmake
core/motor_controllers/diag/: diag_roboclaw.cpp  diag_roboclaw.hpp  diag_roboclaw_main.cpp
core/motor_controllers/src/: config.cpp  motor_dynamics.cpp  roboclaw.cpp
core/motor_controllers/test/: mock_roboclaw.cpp  mock_roboclaw.hpp  test_roboclaw.cpp
core/navigation/: CMakeLists.txt  README.md  cmake_install.cmake
core/navigation/actions/: CMakeLists.txt  cmake_install.cmake
core/navigation/drivetrains/: CMakeLists.txt  cmake_install.cmake
core/navigation/imu/: CMakeLists.txt  cmake_install.cmake
core/navigation/localization/: CMakeLists.txt
core/navigation/navx/: CMakeLists.txt  Doxyfile  cmake_install.cmake
core/navigation/path_follower/: CMakeLists.txt  cmake_install.cmake
core/navigation/path_planner/: CMakeLists.txt
core/navigation/path_planner2/: CMakeLists.txt
core/navigation/pathfinder/: Doxyfile
core/navigation/pose/: CMakeLists.txt  cmake_install.cmake
core/roboclaw/: CMakeLists.txt
core/roboclaw/diag/: diag_roboclaw.cpp  diag_roboclaw.hpp  diag_roboclaw_main.cpp
core/roboclaw/include/: config.hpp  exceptions.hpp  motor_dynamics.hpp  pid_parameters.hpp  roboclaw.hpp
core/roboclaw/src/: config.cpp  motor_dynamics.cpp  roboclaw.cpp
core/roboclaw/test/: mock_roboclaw.cpp  mock_roboclaw.hpp  test_roboclaw.cpp
core/scheduler/include/: action.hpp  action_group.hpp  instant_action.hpp  periodic_action.hpp  scheduler.hpp  subsystem.hpp  timed_action.hpp
core/scheduler/src/: action.cpp  action_group.cpp  instant_action.cpp  periodic_action.cpp  subsystem.cpp  timed_action.cpp
core/status/include/: status_server.hpp
core/status/src/: status_server.cpp
core/utilities/: CMakeLists.txt  cmake_install.cmake
core/utilities/cmd_messenger/: CMakeLists.txt  Doxyfile  README.md  cmake_install.cmake
core/utilities/exceptions_base/: CMakeLists.txt
core/utilities/factory/: CMakeLists.txt
core/utilities/geometry/: CMakeLists.txt  cmake_install.cmake
core/utilities/misc/: CMakeLists.txt  cmake_install.cmake
gui/: CMakeLists.txt  README.md
gui/motor_calculator/: CMakeLists.txt
gui/path_follower/: CMakeLists.txt
gui/path_planner/: CMakeLists.txt
utilities/: CMakeLists.txt
utilities/cmd_messenger/: CMakeLists.txt  README.md
utilities/exceptions_base/: CMakeLists.txt
utilities/googletest_rip_macros/: CMakeLists.txt
utilities/pathman/: CMakeLists.txt  README.md
utilities/pins/: CMakeLists.txt
utilities/roboclaw/: CMakeLists.txt  README.md
utilities/units/: gen.py  units.cfg
(+860 files in other folders)
