cmake_minimum_required(VERSION 3.1)
project(gui)

if(GIT_BRANCH MATCHES "navigation/.*" OR GIT_BRANCH MATCHES "path_planner/.*")
	add_subdirectory(path_planner)
elseif(GIT_BRANCH MATCHES "arduino_gen/.*")
	add_subdirectory(arduino_gen)
else()
	add_subdirectory(path_planner)
	add_subdirectory(arduino_gen)
endif()