cmake_minimum_required(VERSION 3.1)
message("Building navigation")
project(navigation)

if(GIT_BRANCH MATCHES "path_planner")
        add_subdirectory(path_planner)
        add_subdirectory(path_planner2)
elseif(GIT_BRANCH MATCHES "navx")
	add_subdirectory(navx)
elseif(GIT_BRANCH MATCHES "path_follower")
        add_subdirectory(path_planner)
        add_subdirectory(path_planner2)
        #add_subdirectory(drivetrains)
        add_subdirectory(path_follower)
else()
	add_subdirectory(navx)
        add_subdirectory(path_planner)
        add_subdirectory(path_planner2)
        #add_subdirectory(drivetrains)
        add_subdirectory(path_follower)
endif()
