cmake_minimum_required(VERSION 3.1)
message("Building utilities")
project(utilities)

add_subdirectory(cmd_messenger)
add_subdirectory(exceptions_base)
add_subdirectory(units)
add_subdirectory(misc)
add_subdirectory(geometry)
#if(GIT_BRANCH MATCHES "master" OR GIT_BRANCH MATCHES "navigation/.*" OR GIT_BRANCH MATCHES "path_planner/.*")
#	add_subdirectory(geometry)
#endif()
